# games

./: README.md  pyproject.toml  requirements.in
checkpoints/vocabfull-allsecrets-ep10k-8x-ue100-step09900/: config.json  model.pth  optimizer.pth
games/tests/ticket2ride/: test_action_utils.py  test_disjoint_sets.py  test_environment.py  (+1 more)
games/ticket2ride/: action_utils.py  actions.py  board.py  card.py  card_deck.py  disjoint_sets.py  environment.py  features.py  longest_path.py  model.py  player.py  policies.py  render_utils.py  route.py  route_info.py  state.py  ticket.py  ticket_deck.py  trainer.py
games/wordle/: consts.py  environment.py  model.py  policy.py  reward.py  state.py  tracker.py  trainer.py  vocab.py  vocab_10.txt  vocab_100.txt  vocab_1000.txt  vocab_200.txt  wandb.py
tests/ticket2ride/: test_action_utils.py  test_disjoint_sets.py  test_environment.py  test_longest_path.py
tests/wordle/: mock_policy.py  test_environment.py  test_model.py  test_reward.py  test_trainer.py
ticket2ride/: action_utils.py  actions.py  board.py  card.py  card_deck.py  disjoint_sets.py  environment.py  features.py  longest_path.py  model.py  player.py  policies.py  render_utils.py  route.py  route_info.py  state.py  ticket.py  ticket_deck.py  tracker.py  trainer.py
ticket2ride/scripts/: simulate.py  train.py
wordle/: distributed.py  environment.py  model.py  policy.py  reward.py  state.py  tracker.py  trainer.py  vocab.py  vocab_500.txt  wandb.py
wordle/scripts/: evaluate.py  evaluate_supervised.py  gen_vocab.py  train.py  train_supervised.py
(+12 files in other folders)
